--- a/app/src/main/res/layout/activity_b1.xml
+++ b/app/src/main/res/layout/activity_b1.xml
@@ -297,11 +297,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/b1_6">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/b1_6text"
-                android:padding="10dip" />
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:hint="@string/b1_6text"-->
+<!--                android:padding="10dip" />-->
         </RelativeLayout>
 
 
